--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,4 @@
-@media screen (width: 772px;)
-{
-    
-    body {
+body {
     background-color: #dedede;
 }
 
@@ -33,60 +30,35 @@ p{
 
 div img{
     width:150px;
-    height: 30vh;
+    height: 150px;
     display:block;
     margin:auto;
 }
 
 div{
-  display: flex;
-  width: 45vw;
+  display: inline-block;
+  width: 24%;
   margin: 5px;
   padding: 2px;
 }
-}
-@media screen (width: 998px;)
+@media screen and (width: 772px)
 {
-    
-    body {
-    background-color: #dedede;
-}
-
-h1 {
-    text-align: center;
-    font-family:Arial, sans-serif;
-    font-size: 32px;
-}
-
-a {
-    color: #000;
-    text-decoration: none;
-    font-family:Arial, sans-serif;
-}
-
-p {
-   font-size: 25px;
-   font-family:Arial, sans-serif;
-}
-
-img{
-  width:100%;
-}
-
-
-p{
-  text-align:center;
-}
-
 div img{
     width:150px;
-    height: 30vh;
+    max-height: 30vh;
     display:block;
     margin:auto;
 }
 
 div{
-  display: flex;
+  display:block;
+  width: 45vw;
+  margin: 5px;
+  padding: 2px;
+}}
+@media screen and (width:720px){
+div{
+  display: block;
   width: 30vw;
   margin: 5px;
   padding: 2px;
